--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -26,7 +26,7 @@
           <li><a class="nav-link" routerLink="/somos" routerLinkActive="active-link" (click)="isMenuOpen = false">Quem Somos</a></li>
           <li><a class="nav-link" routerLink="/atuamos" routerLinkActive="active-link" (click)="isMenuOpen = false">Como Atuamos</a></li>
           <li><a class="nav-link" routerLink="/blog" routerLinkActive="active-link" (click)="isMenuOpen = false">Blog</a></li>
-          <li><a class="nav-link" routerLink="/associar" routerLinkActive="active-link" (click)="isMenuOpen = false">Associar-se</a></li>
+          <li><a class="nav-link" routerLink="/junte" routerLinkActive="active-link" (click)="isMenuOpen = false">Junte-se a Nós</a></li>
         </ul>
 
         <div class="nav-actions">
