--- a/src/app/admin/proj-form/proj-form.html
+++ b/src/app/admin/proj-form/proj-form.html
@@ -47,6 +47,11 @@
                     </div>
                 }
 
+                 <div class="mb-3">
+  <label for="galleryFiles" class="form-label">Imagens da Galeria (selecione várias)</label>
+  <input type="file" id="galleryFiles" class="form-control" multiple (change)="onGalleryFilesSelected($event)" accept="image/png, image/jpeg, image/webp">
+</div>
+
                 <div class="mb-4">
                     <label class="form-label">Conteúdo Completo do Projeto</label>
                     
